--- a/static/css/base.css
+++ b/static/css/base.css
@@ -65,6 +65,16 @@ body {
     color: #000 !important;
 }
 
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
+
 .border-black {
     border: 1px solid black !important;
 }
