--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'lato';
+    font-family: 'Lato';
 }
 
 /* from Bulma */
@@ -63,16 +63,6 @@ body {
 
 .text-black {
     color: #000 !important;
-}
-
-.overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
 }
 
 .border-black {
